# Cinder

./: .gitignore  CMakeLists.txt  README.md  build.sh
.cache/clangd/index/: PathTracer.cpp.7AEE7154FF87319F.idx  Scene.cpp.31BE1B92291ADA26.idx  Scene.h.F596CF5EDFB0BD43.idx
include/cinder/: Cinder.h
include/cinder/accelerate/: AcceSortFunc.h  AcceTree.h
include/cinder/core/: Renderer.h  Scene.h
include/cinder/geometry/: AABB.h  Camera.h  Intersect.h  Primitive.h  Ray.h  Triangle.h  Vertex.h
include/cinder/integrator/: DirectLightingIntegrator.h  Integrator.h  PathTracingIntegrator.h
include/cinder/render/: BasicDiffuseMaterial.h  BasicEmitMaterial.h  Material.h  Renderer.h
include/cinder/sampler/: Sampler.h
include/cinder/utils/: Constants.h  MathHelper.h
src/cinder/accelerate/: AcceSortFunc.cpp  AcceTree.cpp
src/cinder/core/: Renderer.cpp  Scene.cpp
src/cinder/geometry/: AABB.cpp  Triangle.cpp
src/cinder/integrator/: DirectLightingIntegrator.cpp  Integrator.cpp  PathTracingIntegrator.cpp
src/cinder/render/: BasicDiffuseMaterial.cpp  Renderer.cpp
src/cinder/utils/: stb_impl.cpp
test/: PathTracer.cpp
